       is not allowed any more.  Please refer to
       Documentation/intro/install/ovn-upgrades.rst for the instructions
       in case there are problems encountered when upgrading from an earlier
       version.
     * New support for IPSEC encrypted tunnels between hypervisors.
     * ovn-ctl: allow passing user:group ids to the OVN daemons.
   - DPDK:
     * Add option for simple round-robin based Rxq to PMD assignment.
       It can be set with pmd-rxq-assign.
     * Add support for DPDK 18.11
   - Add 'symmetric_l3' hash function.
   - OVS now honors 'updelay' and 'downdelay' for bonds with LACP configured.
   - ovs-vswitchd:
     * New configuration option "offload-rebalance", that enables dynamic
       rebalancing of offloaded flows.
   - The environment variable OVS_RESOLV_CONF, if set, is now used
     as the DNS server configuration file.

v2.10.0 - 18 Aug 2018
---------------------
   - ovs-vswitchd and utilities now support DNS names in OpenFlow and
     OVSDB remotes.
   - ovs-vswitchd:
     * New options --l7 and --l7-len to "ofproto/trace" command.
     * Previous versions gave OpenFlow tables default names of the form
       "table#".  These are not helpful names for the purpose of accepting
       and displaying table names, so now tables by default have no names.
     * The "null" interface type, deprecated since 2013, has been removed.
     * Add minimum network namespace support for Linux.
     * New command "lacp/show-stats"
   - ovs-ofctl:
     * ovs-ofctl now accepts and display table names in place of numbers.  By
       default it always accepts names and in interactive use it displays them;
       use --names or --no-names to override.  See ovs-ofctl(8) for details.
   - ovs-vsctl: New commands "add-bond-iface" and "del-bond-iface".
   - ovs-dpctl:
     * New commands "ct-set-limits", "ct-del-limits", and "ct-get-limits".
   - OpenFlow:
     * OFPT_ROLE_STATUS is now available in OpenFlow 1.3.